crates/vize_maestro/tests/snapshots/davinci_ts40_projection__davinci_ts40__vue2-native-event__legacy-disabled.snap
---
source: crates/vize_maestro/tests/davinci_ts40_projection.rs
expression: record.render()
---
fixture=vue2-native-event
source-sha256=2b2f3214a7683c004e02b705721aa82bfb50a333a21cbf74e35443d1c9d3a47f
[canon]
status=feature-disabled:vize_maestro/legacy
text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
[content-mapper]
status=feature-disabled:vize_maestro/legacy
text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
[maestro]
status=feature-disabled:vize_maestro/legacy
text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
