crates/vize_maestro/tests/snapshots/davinci_ts40_projection__davinci_ts40__vue2-native-event__legacy.snap
---
source: crates/vize_maestro/tests/davinci_ts40_projection.rs
expression: record.render()
---
fixture=vue2-native-event
source-sha256=2b2f3214a7683c004e02b705721aa82bfb50a333a21cbf74e35443d1c9d3a47f
[canon]
status=ok
text=11097:cf69d3ae2d04d9965c0141be7f4ab6ca2804349bf114237df5dd7c9e6a5900ba
mappings=6:33a5747764cb7fd582285f14901a0a6d8fa2b9c7625403fdf6f9be7c90d6bd92
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
[content-mapper]
status=ok
text=12839:cf5f8956c944d3aea37f2a326156cb653ae6b2ce3328766a579eea1b1c756c31
mappings=6:8ee9ab36f0956c7eb644d6a58bdd0e11df60efb90ffb402666158a74266875ce
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=4:8094590b333e1163ff68eedf315eae10fb085ccfd593a0eda124a8cebc0c343c
[maestro]
status=ok
text=427:b62f1bdbe7c0729bab87abde646ab89a68d54d78b8ad4eec03e66d1b3c273942
mappings=3:5cf7692f0563886fbade21dbe91c6a3fee269913257563e11cc6253c769fa41f
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=4:ee8f5d8fe665e85265209c9412619de337f92dc345b11baddc253a420e52b4e1
